# pyimput

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/py_xinput/: parser.py  type.py  userspace.py  utils.py
src/py_xinput/device/: device.py  properties.py
src/py_xinput/keyboard/: __init__.py  keyboard.py
src/py_xinput/pointer/: pointer.py  pointer_buttons.py
src/pyimput/: __init__.py  main.py  parser.py  type.py  userspace.py  utils.py
src/pyimput/device/: device.py  properties.py
src/pyimput/keyboard/: keyboard.py  keys.py
src/pyimput/pointer/: pointer.py  pointer_buttons.py
tests/: test_pointer.py  test_userspace.py
xinput_python_api/: parser.py  type.py  utils.py  x_device.py
xinput_python_api/device/: __init__.py  device.py  properties.py  x_device.py
xinput_python_api/pointer/: __init__.py  pointer.py  pointer_buttons.py  x_pointer.py
